# bibextracter

./: .gitignore  Cargo.toml  README.md
src/: biblio.rs  extract.rs  main.rs
