[package]
name = "bibextracter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex =  "1"
# git dependency due to bug in parsing reserved latex characters, resolved but not yet released
biblatex = { git = "https://github.com/typst/biblatex.git" } 
clap = { version = "4.0", features = ["derive"]}